[Sync] add exchange_config
