# packages/protocol/octobot_protocol/models/exchange_config.py
@@ -1,0 +1,102 @@
+# coding: utf-8
+
+"""
+    OctoBot protocol types
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+from pydantic import BaseModel, ConfigDict, StrictBool, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
+from octobot_protocol.models.dex_config import DEXConfig
+from typing import Optional, Set
+from typing_extensions import Self
+from pydantic_core import to_jsonable_python
+
+class ExchangeConfig(BaseModel):
+    """
+    ExchangeConfig
+    """ # noqa: E501
+    id: StrictStr
+    name: StrictStr
+    exchange: StrictStr
+    sandboxed: StrictBool
+    url: Optional[StrictStr] = None
+    dex_config: Optional[DEXConfig] = None
+    __properties: ClassVar[List[str]] = ["id", "name", "exchange", "sandboxed", "url", "dex_config"]
+
+    model_config = ConfigDict(
+        validate_by_name=True,
+        validate_by_alias=True,
+        validate_assignment=True,
+        protected_namespaces=(),
+    )
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        return json.dumps(to_jsonable_python(self.to_dict()))
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Optional[Self]:
+        """Create an instance of ExchangeConfig from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        excluded_fields: Set[str] = set([
+        ])
+
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude=excluded_fields,
+            exclude_none=True,
+        )
+        # override the default output from pydantic by calling `to_dict()` of dex_config
+        if self.dex_config:
+            _dict['dex_config'] = self.dex_config.to_dict()
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+        """Create an instance of ExchangeConfig from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "id": obj.get("id"),
+            "name": obj.get("name"),
+            "exchange": obj.get("exchange"),
+            "sandboxed": obj.get("sandboxed") if obj.get("sandboxed") is not None else False,
+            "url": obj.get("url"),
+            "dex_config": DEXConfig.from_dict(obj["dex_config"]) if obj.get("dex_config") is not None else None
+        })
+        return _obj
+
+
