# packages/protocol/octobot_protocol/models/exchange_config_action_result_error_message.py
@@ -1,0 +1,39 @@
+# coding: utf-8
+
+"""
+    OctoBot protocol types
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import json
+from enum import Enum
+from typing_extensions import Self
+
+
+class ExchangeConfigActionResultErrorMessage(str, Enum):
+    """
+    ExchangeConfigActionResultErrorMessage
+    """
+
+    """
+    allowed enum values
+    """
+    EXCHANGE_CONFIG_NOT_FOUND = 'exchange_config_not_found'
+    INVALID_CONFIGURATION = 'invalid_configuration'
+    DUPLICATE_ITEM = 'duplicate_item'
+    INTERNAL_ERROR = 'internal_error'
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of ExchangeConfigActionResultErrorMessage from a JSON string"""
+        return cls(json.loads(json_str))
+
+
