# packages/protocol/octobot_protocol/models/user_action_result_type.py
@@ -28,6 +28,7 @@ class UserActionResultType(str, Enum):
     """
     AUTOMATION = 'automation'
     ACCOUNT = 'account'
+    EXCHANGE_CONFIG = 'exchange_config'
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
